--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,14 @@
-name: Build
+name: Publish
 
 on:
-  push:
-  pull_request:
+  workflow_dispatch:
 
 jobs:
-  sdist:
+  pypi-publish:
     runs-on: ubuntu-latest
-
+    environment: release
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
@@ -18,6 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Create sdist
+      - name: Create dist
         run: |
           python setup.py sdist
+      - name: Publish package distributions to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
