--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ venv
 .DS_store
 
 # Build temporaries
-_*.o
-_*.so
-_*.c
+_pangocairocffi*.o
+_pangocairocffi*.so
+_pangocairocffi*.c
+_pangocairocffi*.py
